--- a/src/Styles/Contact.scss
+++ b/src/Styles/Contact.scss
@@ -95,4 +95,8 @@
     margin-left: 1em;
 }
 
-
+@media only screen and (max-width: 1375px) {
+    .logos-container{
+    padding-bottom: 3em;
+    }
+  }
